deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account
spec:
  ports:
  - port: 8080
  selector:
    app: account
